--- a/index.html
+++ b/index.html
@@ -379,9 +379,18 @@
     }
     /* 최근내역 - 카테고리/카드/사용처를 보조 텍스트로 */
     .recent-title{
-      font-size: 13px;          /* 날짜랑 같은 급 */
-      color: #444;
-      font-weight: 400;
+      font-size: 14px;
+      font-weight: 700;
+      letter-spacing: -0.2px;
+      color: var(--text);
+      display:flex;
+      align-items:center;
+      gap:8px;
+     }
+
+    .recent-sub{
+      font-size: 12px;          /* ✅ 아래줄 작게 */
+      color: var(--muted);
       letter-spacing: -0.2px;
     }     
     .recent-meta{
@@ -773,40 +782,46 @@ function renderRecent(){
   const wrap = document.getElementById("recentList");
   if(!wrap) return;
 
-  const list = loadRecords().slice(0, 10); // 최근 10개
+  const list = loadRecords().slice(0, 10);
   if(list.length === 0){
     wrap.innerHTML = `<p class="hint">아직 기록이 없어. +로 추가해봐!</p>`;
     return;
   }
 
- wrap.innerHTML = list.map(x => {
-  const place = x.place ? ` · ${x.place}` : "";
-  const metaLeft = [x.category, x.card].filter(Boolean).join(" · "); // 예: "상품매입비 · 신한"
-  const meta = `${metaLeft}${place}`; // 예: "상품매입비 · 신한 · 도매매"
+  wrap.innerHTML = list.map(x => {
+    // 날짜 표시 (2026. 01. 29)
+    const d = (x.spentDate || "").replaceAll("-", ". ");
+    const dateText = d ? (d + ".") : "";
 
-  // 날짜 표시: "2026. 01. 29" 형태
-  const d = (x.spentDate || "").replaceAll("-", ". ");
-  const dateText = d ? `${d}` : "";
+    // 메모 불릿(메모 있으면 표시)
+    const hasMemo = !!(x.memo && x.memo.trim());
+    const memoDot = hasMemo ? `<span class="memo-dot" aria-label="메모 있음"></span>` : "";
 
-  const amtClass = x.type === "income" ? "amt-income" : "amt-expense";
+    // 아래줄: 카드 / 구매처만
+    const card = x.card ? x.card : "";
+    const place = x.place ? x.place : "";
+    const sub = [card, place].filter(Boolean).join(" · ");
 
-  return `
-    <div class="recent-item">
-      <div class="recent-left">
-        <div class="recent-date">${dateText}</div>
+    // 금액 색 (지출/수입)
+    const amtClass = x.type === "income" ? "amt income" : "amt expense";
 
-        <div class="recent-title">
-          ${x.category || "기타"}
-          ${x.memo ? `<span class="memo-dot"></span>` : ""}
+    return `
+      <div class="recent-item">
+        <div class="recent-left">
+          <div class="recent-meta">${dateText}</div>
+
+          <div class="recent-title">
+            ${x.category || "기타"}
+            ${memoDot}
+          </div>
+
+          <div class="recent-sub">${sub}</div>
         </div>
 
-        <div class="recent-meta">${meta}</div>
+        <div class="recent-amt ${amtClass}">${fmtKRW(x.amount)}</div>
       </div>
-
-      <div class="recent-amt ${amtClass}">${fmtKRW(x.amount)}</div>
-    </div>
-  `;
-}).join("");
+    `;
+  }).join("");
 }
 
 // 페이지 처음 열릴 때 1번 실행
