--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
       color:var(--text);
       font-family:-apple-system,BlinkMacSystemFont,"Apple SD Gothic Neo","Noto Sans KR",Segoe UI,Roboto,Helvetica,Arial,sans-serif;
       -webkit-font-smoothing:antialiased;
-      padding-bottom:78px; /* bottom tab 공간 */
+      padding-bottom: calc(120px + env(safe-area-inset-bottom));
     }
 
     /* 상단 헤더 */
