--- a/index.html
+++ b/index.html
@@ -354,10 +354,11 @@
 
 
     #recentList{
-      display:flex;
-      flex-direction:column;
-      gap:10px;
-      margin-top:10px;
+      display: flex;
+      flex-direction: column;
+      gap: 10px;
+      margin-top: 10px;
+      padding-bottom: 140px; /* 여유 공간 확보 */
     }
     .recent-item{
       display:flex;
