--- a/index.html
+++ b/index.html
@@ -512,8 +512,8 @@
       <div class="card">
         <h2>홈</h2>
         <p class="hint">
-          여기엔 “지출/수입 추가” + “리스트”가 들어갈 자리야.<br/>
-          다음 단계에서 + 버튼 누르면 입력창 뜨게 만들 거임.
+          오늘 쓴 돈을 아는 것만으로 충분하다.<br/>
+          작심삼일이면, 1년에 120번이다.
         </p>
       </div>
 
