--- a/index.html
+++ b/index.html
@@ -463,8 +463,8 @@ body.edit-mode .delete-btn{
   margin-top: 10px;                 /* 명언과 한 줄 공기 */
   display: inline-flex;
   justify-content: space-between;
-  align-items: baseline;
-  gap: 6px;
+  align-items: center;
+  gap: 4px;
 }
 
 .today-spend .label{
@@ -476,7 +476,7 @@ body.edit-mode .delete-btn{
 
 .today-spend .value{
   display: inline-flex;                 /* 과하지 않게, 딱 인지용 */
-  letter-spacing: -0.2px;
+  letter-spacing: 0px;
   font-size: 14px;               /* 본문과 동일 */
   font-weight: 400;              /* ⭐ 굵기 통일 */
 }
