--- a/index.html
+++ b/index.html
@@ -358,6 +358,7 @@
       flex-direction: column;
       gap: 10px;
       margin-top: 10px;
+      padding-top: 6px;
       padding-bottom: 46px; /* 여유 공간 확보 */
     }
     .recent-item{
