--- a/index.html
+++ b/index.html
@@ -357,8 +357,13 @@
       display: flex;
       flex-direction: column;
       gap: 10px;
-      margin-top: 10px;
+      margin-top: 6px;
       padding-bottom: 46px; /* 여유 공간 확보 */
+    }
+
+    /* 최근내역 첫 월 헤더는 위 여백 제거 */
+    #recentList .month-header:first-child{
+      margin-top: 0;
     }
     .recent-item{
       display:flex;
