--- a/index.html
+++ b/index.html
@@ -290,6 +290,12 @@
     inset 0 1px 0 rgba(255,255,255,.9);
 }
 
+
+    #monthlyTop3{
+      margin-bottom: 14px; /* Top3 아래 공기층 */
+    }
+
+    
     #memo{
       background: var(--panel2);
       border: 1px solid var(--line);
