--- a/index.html
+++ b/index.html
@@ -862,26 +862,41 @@ body.edit-mode .delete-btn{
     const fab = document.getElementById('fab');
 
     function setActiveTab(target){
-      // pages
-      Object.entries(pages).forEach(([key, el])=>{
-        el.classList.toggle('active', key === target);
-      });
+    function setActiveTab(target){
+  // pages
+  Object.entries(pages).forEach(([key, el])=>{
+    el.classList.toggle('active', key === target);
+  });
 
-      // tabs
-      tabs.forEach(t=>{
-        const isActive = t.dataset.target === target;
-        t.classList.toggle('active', isActive);
-        t.setAttribute('aria-selected', isActive ? 'true' : 'false');
-      });
+  // tabs
+  tabs.forEach(t=>{
+    const isActive = t.dataset.target === target;
+    t.classList.toggle('active', isActive);
+    t.setAttribute('aria-selected', isActive ? 'true' : 'false');
+  });
 
-      // + 버튼은 홈에서만 보이기
-      fab.classList.toggle('hidden', target !== 'home');
+  // + 버튼은 홈에서만 보이기
+  fab.classList.toggle('hidden', target !== 'home');
+
+  // ✅ 월별 탭 처음 눌렀을 때도 리스트+TOP3까지 바로 렌더
+  if(target === "monthly"){
+    const select = document.getElementById("monthSelect");
+    if(select && select.value){
+      renderMonthly(select.value);
+    }else{
+      // select가 비었거나 아직 채워지기 전이면: 다시 채우고 렌더
+      renderMonthSelect();
+      const select2 = document.getElementById("monthSelect");
+      if(select2 && select2.value){
+        renderMonthly(select2.value);
+      }
     }
+  }
+}
 
-    tabs.forEach(t=>{
-      t.addEventListener('click', ()=> setActiveTab(t.dataset.target));
-    });
-
+tabs.forEach(t=>{
+  t.addEventListener('click', ()=> setActiveTab(t.dataset.target));
+});
 
     
 // ✅ 편집모드 토글
@@ -1563,9 +1578,9 @@ renderTodaySpend();
 renderMonthSelect(); // ✅ 추가
 
 document.getElementById("monthSelect")?.addEventListener("change", (e)=>{
-renderMonthlySummary(e.target.value);
+  renderMonthly(e.target.value);
 });
-
+      
 
 /* =========================
    ✏️ 수정 버튼 클릭 처리
