--- a/index.html
+++ b/index.html
@@ -295,6 +295,9 @@
       margin-bottom: 14px; /* Top3 아래 공기층 */
     }
 
+    #monthlySummary b{
+      font-weight: 500; /* 400~600 사이로 취향 조절 */
+    }
     
     #memo{
       background: var(--panel2);
