--- a/index.html
+++ b/index.html
@@ -298,6 +298,10 @@
     #monthlySummary b{
       font-weight: 500; /* 400~600 사이로 취향 조절 */
     }
+
+    #monthlyList{
+      padding-bottom: 46px; /* 홈 recentList랑 동일 */
+    }
     
     #memo{
       background: var(--panel2);
